cmake_minimum_required(VERSION 3.27)
project(Problem_Solving_2024_2025)

set(CMAKE_CXX_STANDARD 14)

include_directories("Problem Solving Betounsi in C++/France_IOI/Level3")

add_executable(FrancIOI_problem1
        "Problem Solving Betounsi in C++/France_IOI/Level3/problem1.cpp")

add_executable(FrancIOI_problem2
        "Problem Solving Betounsi in C++/France_IOI/Level3/problem2.cpp")
add_executable(FrancIOI_problem3
        "Problem Solving Betounsi in C++/France_IOI/Level3/problem3.cpp")